[package]
name = "okena-usage"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-ui = { path = "../okena-ui" }
okena-extensions = { path = "../okena-extensions" }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
serde_json = "1.0"
jiff = "0.2"
