[package]
name = "okena-views-terminal"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core" }
okena-extensions = { path = "../okena-extensions" }
okena-terminal = { path = "../okena-terminal" }
okena-workspace = { path = "../okena-workspace" }
okena-ui = { path = "../okena-ui" }
okena-files = { path = "../okena-files" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }

alacritty_terminal = "0.25"
parking_lot = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2.0"
