[package]
name = "okena-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
okena-core = { path = "../okena-core", features = ["client"] }
okena-terminal = { path = "../okena-terminal" }
okena-git = { path = "../okena-git" }
okena-layout = { path = "../okena-layout" }
okena-state = { path = "../okena-state" }
okena-hooks = { path = "../okena-hooks" }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
tokio = { version = "1", features = ["sync"] }
dirs = "5.0"
anyhow = "1.0"
smol = "2.0"
libc = "0.2"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }
