[package]
name = "okena-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["gpui"]
gpui = ["dep:gpui", "okena-hooks/gpui"]

[dependencies]
okena-core = { path = "../okena-core" }
okena-transport = { path = "../okena-transport", features = ["client"] }
okena-terminal = { path = "../okena-terminal" }
okena-git = { path = "../okena-git" }
okena-layout = { path = "../okena-layout" }
okena-state = { path = "../okena-state" }
okena-hooks = { path = "../okena-hooks", default-features = false }

gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
log = "0.4"
tokio = { version = "1", features = ["sync"] }
dirs = "5.0"
anyhow = "1.0"
smol = "2.0"
libc = "0.2"

# `gpui` here is the *same* optional dependency declared in `[dependencies]`;
# this entry only layers on the `test-support` feature so the gpui-gated test
# modules can use `#[gpui::test]` / `TestAppContext`. As a dev-dependency it is
# never part of a production (non-test) build, so the shipped binary's gpui
# feature set is unchanged. It is intentionally NOT routed through the `gpui`
# feature: doing so would enable `test-support` in consumers' production builds
# (a real feature-set change). A `--no-default-features` build never compiles
# gpui (verified: zero `Compiling gpui`); the dependency only appears in the
# `cargo tree` metadata graph, not in any compiled artifact.
[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", features = ["test-support"] }
