[package]
name = "okena_mobile_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
okena-core = { path = "../../crates/okena-core", features = ["client"] }
flutter_rust_bridge = "=2.11.1"
alacritty_terminal = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
log = "0.4"
anyhow = "1.0"
async-channel = "2.3"
futures = "0.3"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
